# spiderpig

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  cli.py  future_work.md  joinery.py  justfile  klann.py  layout.py  linkage_solver.py  main.py  mechanism.py  mise.toml  pyproject.toml  shapes.py
Project/: linkage_solver.py  main.py  test.txt
lab_0/: README.md  solution.py  star.py
lab_1/: README.md  solution.py
lab_2/: .gitignore  LOGOROBOT.stl  README.md  solution.py
lab_3/: README.md  solution.py
lab_4/: README.md  solution.py
lab_5/: README.md  solution.py
lab_6/: README.md  solution.py  ternary_link.tpd
scripts/: dev.py  kill_dev.py
server/: app.py  watcher.py
tests/: conftest.py  test_bake_gltf.py  test_export.py  test_geometry.py  test_joinery.py  test_klann_solution.py  test_mechanism.py  test_multi_linkage.py  test_poses.py  test_transforms.py
tests/e2e/: test_viewer.py
viewer/: README.md  bake.py  bake_gltf.py  index.html  main.js  package-lock.json  package.json  poses.py  tsconfig.json  vite.config.ts
viewer/src/: controls.ts  live-reload.ts  loader.ts  main.ts  scene.ts  style.css  types.ts
