[project]
name = "spiderpig"
version = "0.1.0"
description = "Klann walking-linkage mechanism generator for laser cutting and 3D printing"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "sympy>=1.13",
    "build123d>=0.8",
    "ezdxf>=1.3",
    "rectpack>=0.2",
]

[dependency-groups]
dev = [
    "ruff>=0.9",
    "pytest>=8",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
