[project]
name = "spiderpig"
version = "0.1.0"
description = "Klann walking-linkage mechanism generator for laser cutting and 3D printing"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy>=2.2",
    "scipy>=1.15",
    "sympy>=1.14",
    "build123d>=0.10,<0.12",
    "pytransform3d>=3.14",
    "ezdxf>=1.4",
    "rectpack>=0.2",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "watchfiles>=1.0",
    "pygltflib>=1.16",
]

[dependency-groups]
dev = [
    "ruff>=0.9",
    "pytest>=8",
    "playwright>=1.49",
    "pytest-playwright>=0.6",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PT", "NPY"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -m 'not e2e'"
markers = [
    "e2e: end-to-end Playwright tests (opt-in; run with `pytest -m e2e`)",
]
